# meshwire

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mesh.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/memory/: handoff-20260711-1745.md
.github/workflows/: ci.yml  publish.yml
.plugin/: marketplace.json
docs/: AGENTS.md  TESTING-NOTES.md
docs/superpowers/plans/: 2026-07-09-v0.5-frictionless-mesh.md  2026-07-09-v0.6-autowatch.md  2026-07-10-codex-plugin.md  2026-07-10-copilot-same-session-watch.md  2026-07-10-delivery-acks.md  2026-07-11-armed-watcher-on-join.md  2026-07-12-codex-autonomy-identity-migration.md  2026-07-12-codex-supervise-fixes-0.14.1.md  2026-07-14-machine-wide-worker-pool.md
docs/superpowers/specs/: 2026-07-09-v0.5-frictionless-mesh-design.md  2026-07-09-v0.6-autowatch-design.md  2026-07-10-codex-plugin-design.md  2026-07-10-copilot-same-session-watch-design.md  2026-07-10-delivery-acks-design.md  2026-07-11-armed-watcher-on-join-design.md  2026-07-12-codex-autonomy-and-identity-migration.md  2026-07-12-codex-wake-spike.md  2026-07-14-machine-wide-worker-pool.md
hooks/: hooks.json
meshwire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
plugins/a2acast/.codex-plugin/: plugin.json
plugins/a2acast/hooks/: hooks.json
plugins/a2acast/skills/mesh-agent/: SKILL.md
plugins/copilot-a2acast/: hooks.json  plugin.json
plugins/copilot-a2acast/skills/mesh-agent/: SKILL.md
plugins/copilot-meshwire/: .mcp.json  hooks.json  mesh.py  plugin.json
plugins/copilot-meshwire/skills/mesh-agent/: SKILL.md
plugins/meshwire/: mesh.py
plugins/meshwire/.codex-plugin/: plugin.json
plugins/meshwire/hooks/: hooks.json
plugins/meshwire/skills/mesh-agent/: SKILL.md
skills/mesh-agent/: SKILL.md
tests/: test_mesh.py  test_rehearsal_tool.py
tools/: rehearse_key_mismatch.py
