[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a2acast"
version = "0.15.0"
description = "Zero-infrastructure messaging between AI agent sessions on different machines (ntfy.sh wake pings + your shared repo as the payload channel)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "James Gagan", email = "james.gagan@gmail.com" }]
requires-python = ">=3.8"
keywords = ["agents", "a2a", "claude", "chatgpt", "copilot", "ntfy", "messaging", "multi-agent"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/husker/a2acast"

[project.scripts]
mesh = "mesh:main"
a2acast = "mesh:main"

[tool.setuptools]
py-modules = ["mesh"]
